--- a/DIW/exercise4-flexbox/1-flexbox-boxes.css
+++ b/DIW/exercise4-flexbox/1-flexbox-boxes.css
@@ -87,24 +87,18 @@ CONTAINER C05
   padding: 20px 40px;
   margin: 3px;
 }
-/********* ADD YOUR CODE  HERE **********/
+
+.c05 {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
 
 .c05 div:nth-child(1){
-  display: flex;
-
+  width: 50%;
 }
 
-.c05 div:nth-child(2){
-  display: flex;
-
-}
-
-.c05 div:nth-child(3){
-  display: flex;
-
-}
-
-/********* END OF YOUR CODE **********/
 
 /**
 CONTAINER C06
@@ -120,7 +114,22 @@ CONTAINER C06
 }
 /********* ADD YOUR CODE  HERE **********/
 
+.c06 div:nth-child(1){
+  order: 1;
 
+}
+.c06 div:nth-child(2){
+  order: 4;
+
+}
+.c06 div:nth-child(3){
+  order: 3;
+
+}
+.c06 div:nth-child(4){
+  order: 2;
+
+}
 
 
 /********* END OF YOUR CODE **********/
