--- a/test/approach-project1/styles.css
+++ b/test/approach-project1/styles.css
@@ -34,7 +34,7 @@
 
 .message-box{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     border: 2px solid black;
 }
@@ -66,7 +66,31 @@
 }
 
 .normal-key{
-    /* flex-basis: auto; */
+    display: flex;
+    flex-basis: 100%;
+    font-size: 15px;
+    text-align: center;
+    height: 10px;
+    line-height: 0;
+    margin: 2px;
+    padding: 20px 15px;
+
+    background: #2a2a2a;
+    color: #aaa;
+    box-shadow: 0 0 0 0.05em black;
+
+}
+
+.space {
+    display: flex;
+    flex-grow: 1;
+    padding: 20px 75px;
+}
+
+/* Idea for functionality for uppercase keys
+.upper-key{
+    display: flex;
+    flex-basis: 100%;
     font-size: 15px;
     text-align: center;
     height: 10px;
@@ -78,7 +102,4 @@
     color: #aaa;
     box-shadow: 0 0 0 0.05em black;
 }
-
-.space {
-    /* flex-grow: 4; */
-}
+*/
