--- a/DIW/exercise5-sass-and-scss/styles.scss
+++ b/DIW/exercise5-sass-and-scss/styles.scss
@@ -14,10 +14,14 @@ How to execute with terminal:
 Remains the same but without opening/closing keys and semicolons
  */
 
+/* Importing a second color from another scss */
+@import "import-test";
+
 $font-stack: Helvetica, sans-serif;
 $primary-color: blue;
 
 body {
   font: 70% $font-stack;
   color: $primary-color;
+  background-color: $secondary-color;
 }
