--- a/DIW/exercise5-sass-and-scss/styles.scss
+++ b/DIW/exercise5-sass-and-scss/styles.scss
@@ -2,7 +2,7 @@
 
 /*
 How to execute with terminal:
-  sass styles.scss:styles.css --watch
+  sass styles.scss:template.css --watch
 
 1.Make full path from terminal situation
 2.If successful, new css will be created
