--- a/DIW/exercise6-bootstrap/css/custom.css
+++ b/DIW/exercise6-bootstrap/css/custom.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+body {
+  font: 100% Arial, sans-serif;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
